--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="imgWrapper">
                     <div class="imgWrapperAni">
                         <div class="content">
-                            <img src="/Picture/DSC_4425.jpg" alt="">
+                            <img src="/Picture/DSC_4425.jpg" alt="Joe's image">
                         </div>
                     </div>
                 </div>
