--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div class="cardInformation">
             <div class="image">
                 <div class="imgLogo">
-                    <img src="/Picture/R.png" alt="RMIT logo">
+                    <img src="Picture/R.png" alt="RMIT logo">
                 </div>
                 <div class="imgWrapper">
                     <div class="imgWrapperAni">
                         <div class="content">
-                            <img src="/Picture/DSC_4425.jpg" alt="Joe's image">
+                            <img src="Picture/DSC_4425.jpg" alt="Joe's image">
                         </div>
                     </div>
                 </div>
